--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "npm install & tsc",
+    "build": "tsc",
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
   },
   "author": "",
